<resources>
    <string name="app_name">LORD OF THE RINGS TRIVIA</string>
    <string name="nickNameRequest">Please enter a nick name</string>
    <string name="teaser">Can you answer these questions?</string>
    <string name="submit">Check Answers</string>


    <!-- Free text questions, hints and answers -->
    <!--question 1-->
    <string name="tq1">Who is the main villain in Lord of the Rings novels?</string>
    <string name="tq1a1">sauron</string>
    <string name="tq1Hint">Please write your answer here</string>

    <!-- Check box questions and answers -->
    <!--question 1-->
    <string name="cbq1">Which of these races did receive rings of power?</string>
    <string name="cbq1a1">Humans</string>
    <string name="cbq1a2">Dwarfs</string>
    <string name="cbq1a3">Goblins</string>
    <string name="cbq1a4">Elves</string>

    <!-- Radio buttons questions and answers -->
    <!--question 1-->
    <string name="q1">How many rings of power were created?</string>
    <string name="q1a1">16</string>
    <string name="q1a2">20</string>

    <!--question 2-->
    <string name="q2">How many wizards were in Middle Earth?</string>
    <string name="q2a1">5</string>
    <string name="q2a2">8</string>

    <!--question 3-->
    <string name="q3">How many members the Nazgûls consists of?</string>
    <string name="q3a1">7</string>
    <string name="q3a2">9</string>

    <!--question 4-->
    <string name="q4">Who killed the Witch-king?</string>
    <string name="q4a1">Éowyn the shield maiden</string>
    <string name="q4a2">Arwen Undómiel</string>

    <!--question 5-->
    <string name="q5">Who created the 3 Rings of the Elves?</string>
    <string name="q5a1">Celebrimbor</string>
    <string name="q5a2">Sauron</string>

    <!-- Responses to score -->

    <string name="responsePerfect">Congratz %s!! Perfect score %d/%d</string>
    <string name="responseAlmostThere">Almost there %s! You scored %d/%d</string>
    <string name="responseTryAgain">Try again %s! You scored %d/%d</string>

    <!-- Content description -->
    <string name="contentDescriptionIntro">Lord of the rings intro logo</string>
    <string name="contentDescriptionRing">Ring</string>
    <string name="contentDescriptionWizards">Wizards</string>
    <string name="contentDescriptionWitchKing">Witch King</string>
    <string name="contentDescriptionEowyn">Eowyn</string>
    <string name="contentDescriptionArwen">Arwen</string>
    <string name="contentDescriptionCelebrimbor">Celebrimbor</string>
    <string name="contentDescriptionSauron">Sauron</string>
</resources>
